Start move configuration to settings

--- a/css/pageimages.css
+++ b/css/pageimages.css
@@ -2,3 +2,8 @@
 .sorterdir.hidden, .sorter.hidden {
     display: none;
 }
+/* Hide pageimages settings */
+.CompositeField.fieldgroup.hidden
+{
+    display: none;
+}
