--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -1,16 +1,19 @@
 #galleria
 {
-    width:100%;
-    height:100%;
+    max-width:100%;
     background:#fff;
-    padding:12px;
-    -moz-box-shadow:    0 1px 3px rgba(0,0,0,.2);
-    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.2);
-    box-shadow:         0 1px 3px rgba(0,0,0,.2);
 }
 
 #galleria img
 {
     border: 0 !important;
     background: none;
+}
+
+.galleria-theme-classic .galleria-stage {
+    position: absolute;
+    top: 0px;
+    bottom: 60px;
+    left: 0px;
+    right: 0px;
 }
