--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -10,10 +10,24 @@
     background: none;
 }
 
-.galleria-theme-classic .galleria-stage {
+.galleria-theme-classic .galleria-stage
+{
     position: absolute;
     top: 0px;
     bottom: 60px;
     left: 0px;
     right: 0px;
+}
+
+.galleria-layer .overlay
+{
+   color: white;
+   font: bold 24px/45px Helvetica, Sans-Serif;
+   letter-spacing: -1px;
+   background: rgb(0, 0, 0); /* fallback color */
+   background: rgba(0, 0, 0, 0.3);
+   padding: 10px;
+   position: absolute;
+   bottom: 50px;
+   right: 50px;
 }
