--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -19,11 +19,15 @@
     right: 0px;
 }
 
+/* Style caption */
 .galleria-layer .overlay
 {
-   color: white;
-   font: bold 24px/45px Helvetica, Sans-Serif;
-   letter-spacing: -1px;
+    /*
+    color: white;
+    font: bold 24px/45px Helvetica, Sans-Serif;
+    letter-spacing: -1px;
+    */
+   color: #d3d3d3;
    background: rgb(0, 0, 0); /* fallback color */
    background: rgba(0, 0, 0, 0.3);
    padding: 10px;
